fixed logo size and made the club name have elipses if its too long for the page

--- a/src/main/resources/static/css/team-profile.css
+++ b/src/main/resources/static/css/team-profile.css
@@ -491,3 +491,16 @@
     width: 85%;
     height: auto;
 }
+
+/* blow are the changes that make the logo a fixed size and also put elipses on words longer than 15 chars*/
+.logo {
+    width: 100px;
+    text-align: center;
+}
+
+.club-header {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 15ch;
+}
